# inferloop-synthdata

./: .gitignore  DATA_CAPTURE_IMPLEMENTATION_PLAN_2025-06-26_03-48-40.md  INFRASTRUCTURE_MIGRATION_GUIDE.md  PRICING_AND_LICENSING.md  PRODUCT_ARCHITECTURE.md  PRODUCT_STRATEGY.md  README.md  SESSION_CONTEXT_2025-06-26.md  TABULAR_MIGRATION_COMPLETION.md  TABULAR_VS_TEXTNLP_COMPARISON.md  TEXTNLP_IMPLEMENTATION_ROADMAP.md  WORK_SUMMARY_2025-06-26_02-46-56.md  build_instructions.txt  data_capture_framework-1.md  install.sh
audio/: README.md  build_repo.sh  conftest.py  pyproject.toml  pytest.ini  requirements.txt
audio/configs/: default.yaml  production.yaml  training_config.yaml
audio/configs/models/: diffusion_config.yaml  gan_config.yaml
audio/docker/: Dockerfile  docker-compose.yml
audio/examples/: basic_generation.py  faireness_analysis.py  privacy_preserving.py
audio/monitoring/: alerting.py  dashboard.py  metrics_collector.py
audio/scripts/: benchmark.py  setup.sh  train_models.py
audio/src/audio_synth/: __init__.py
audio/tests/: test_api.py  test_generators.py  test_integration.py  test_validators.py
docs/: .gitignore  COMPLETION_SUMMARY.md  DESIGN-v7.md  REPO_SPLIT_STRATEGY.md  pyproject.toml  reorganize_structure.sh  reorganize_structure_clean.sh  reorganize_structure_fixed.sh  repo_setup_script-v10.sh  requirements.txt  setup.py  test_completed_enhanced.py  test_final_qa.py  test_generators.py  test_module_completeness.py  test_mvp.py  test_pii_detector.py  test_privacy_compliance.py  test_syntax_only.py  test_syntax_qa.py  test_unicode_fix.py
tabular/: .coveragerc  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_DESIGN.md  README.md  SESSION_CONTEXT.md  __init__.py  aws-deployment-architecture.md  aws-infrastructure-design.md  azure-infrastructure-design.md  build_instructions.txt  common-infra-library-design.md  create_project_structure.bat  create_project_structure.sh  deployment-completion-report-2025-06-23.md  deployment-config.yaml  gcp-infrastructure-design.md  migrate_to_unified.sh  on-premises-cross-platform-testing-design.md  on-premises-deployment-workflow.md  pyproject.toml  run_migration.py  switch_to_unified.py  test_unified_integration.py  work-to-do-2025-06-23-deployment-readiness.md  work-to-do-2025-06-23.md  work-to-do-2025-06-24-deployment-status.md  work-to-do-2025-06-25-deployment-progress.md  work-to-do-2025-06-26-final-status.md
tabular/.github/workflows/: test-coverage.yml
tabular/api/: app.py  app_legacy.py  app_unified.py  routes_unified.py
tabular/api/auth/: __init__.py  api_key_manager.py  auth_handler.py  models.py
tabular/api/endpoints/: __init__.py  batch.py  benchmark.py  cache.py  privacy.py  profiling.py  streaming.py  versioning.py
tabular/api/middleware/: __init__.py  error_tracker.py  rate_limiter.py  (+2 more)
tabular/cli/: main.py
tabular/deploy/: __init__.py
tabular/docs/: API_DOCUMENTATION.md  CLI_DOCUMENTATION.md  CLOUD_PLATFORMS_AND_DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_IN_PHASES_GUIDE.md  HOW_SYNTHETIC_DATA_IS_GENERATED.md  LOCALHOST_DEVELOPMENT_SETUP.md  MONITORING_AND_MAINTENANCE_GUIDE.md  ON_PREMISE_HOSTING_GUIDE.md  README.md  SDK_DOCUMENTATION.md  SECURITY_AND_COMPLIANCE_GUIDE.md  USER_GUIDE.md
tabular/examples/: notebook.ipynb  notebook.py
tabular/inferloop-infra/: README.md  pyproject.toml
tabular/infrastructure/: __init__.py  adapter.py
tabular/migrations/: 001_initial_schema.sql
tabular/scripts/: test_coverage.py
tabular/sdk/: __init__.py  base.py  batch.py  benchmark.py  cache.py  ctgan_generator.py  factory.py  privacy.py  profiler.py  progress.py  sdv_generator.py  sdv_generator_old.py  streaming.py  validator.py  versioning.py  ydata_generator.py
tabular/tabular/: README.md
tabular/tests/: conftest.py  test_api.py  test_cli.py  test_edge_cases.py  test_error_recovery.py  test_load.py  test_sdk.py
textnlp/: .env.example  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INCOMPLETE_MODULES_2025-01-25.md  INFRASTRUCTURE_COMPLETION_STATUS.md  INFRASTRUCTURE_DESIGN.md  MODULE_COMPLETION_ORDER_2025-01-25.md  PHASE1_COMPLETION_REPORT.md  PHASE2_MODEL_STORAGE_COMPLETION_REPORT.md  PHASE_4_COMPLETION_SUMMARY.md  README.md  SESSION_CONTEXT.md  aws-infrastructure-design.md  azure-infrastructure-design.md  build_instructions.txt  create_project_structure.py  deployment-config.yaml  deployment-workflow.md  dir-structure.ini  gcp-infrastructure-design.md  migrate_to_unified.sh  pyproject.toml  text_generation_validaiton.py  textnlp.code-workspace
textnlp/api/: app.py  app_unified.py  routes.py
textnlp/cli/: main.py
textnlp/config/: .env.example  development.yaml  integration_config.yaml  metrics_config.yaml  safety_config.yaml
textnlp/data/: real_vs_synthetic_pairs.json  sample_outputs.jsonl  sample_prompts.csv
textnlp/docs/: AIR_GAPPED_DEPLOYMENT_GUIDE.md  API_DOCUMENTATION.md  CLI_DOCUMENTATION.md  DEPLOYMENT_IN_PHASES_GUIDE.md  HOW_SYNTHETIC_DATA_IS_GENERATED.md  LOCALHOST_DEVELOPMENT_SETUP.md  MONITORING_AND_MAINTENANCE_GUIDE.md  ON_PREMISE_HOSTING_GUIDE.md  README.md  SDK_DOCUMENTATION.md  SECURITY_AND_COMPLIANCE_GUIDE.md  USER_GUIDE.md  gpu-requirements-assessment.md  platform-selection.md  team-access-configuration.md
textnlp/examples/: complete_integration_example.py
textnlp/infrastructure/: README.md  __init__.py  adapter.py
textnlp/metrics/: __init__.py  business_dashboard.py  generation_metrics.py  quality_metrics.py  resource_tracker.py
textnlp/optimization/: batch_inference.py  caching_system.py  edge_deployment.py  global_inference_network.py  model_optimizer.py
textnlp/safety/: __init__.py  audit_logger.py  bias_detector.py  compliance_checker.py  pii_detector.py  toxicity_classifier.py
textnlp/scripts/: setup_dev_env.sh
textnlp/sdk/: __init__.py  base_generator.py  formatter.py  langchain_template.py  llm_gpt2.py
textnlp/services/: __init__.py  service_orchestrator.py  unified_service.py
textnlp/templates/: feedback_summary.json  support_chat_template.json
textnlp/tests/: test_bleu_rouge.py  test_langchain_template.py  test_llm_gpt2.py
(+919 files in other folders)
