# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferloop-nlp-synthetic"
version = "0.1.0"
description = "Text/NLP Synthetic Data Generation with Multiple Engines"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "nltk>=3.7",
    "rouge-score>=0.1.2",
    "openai>=0.27.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "typer>=0.6.0",
    "pandas>=1.3.0",
    "pydantic>=1.8.0",
    "python-multipart>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]

[project.scripts]
inferloop-nlp = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*", "api*", "cli*"]
