# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferloop-nlp-synthetic"
version = "0.1.0"
description = "Text/NLP Synthetic Data Generation with Multiple Engines"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core ML and NLP
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "nltk>=3.7",
    "spacy>=3.4.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.1.0",
    
    # Quality Metrics
    "rouge-score>=0.1.2",
    "sentence-transformers>=2.2.0",
    
    # Safety and Security
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "detoxify>=0.5.0",
    "email-validator>=1.3.0",
    "phonenumbers>=8.12.0",
    
    # API and Web Framework
    "openai>=0.27.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-multipart>=0.0.5",
    
    # CLI and Data Processing
    "typer>=0.6.0",
    "pandas>=1.3.0",
    "pydantic>=1.8.0",
    
    # System Monitoring and I/O
    "psutil>=5.8.0",
    "aiofiles>=0.8.0",
    "GPUtil>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]

[project.scripts]
inferloop-nlp = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*", "api*", "cli*", "safety*", "metrics*", "infrastructure*"]
