[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferloop-infra"
version = "0.1.0"
description = "Multi-cloud infrastructure deployment for Inferloop"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Inferloop Team", email = "team@inferloop.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["infrastructure", "cloud", "deployment", "aws", "gcp", "azure", "multi-cloud"]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "asyncio>=3.4.3",
]
requires-python = ">=3.8"

[project.optional-dependencies]
aws = [
    "boto3>=1.26.0",
    "botocore>=1.29.0"
]
gcp = [
    "google-cloud-compute>=1.13.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-resource-manager>=1.10.0",
    "google-auth>=2.20.0"
]
azure = [
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-compute>=30.0.0",
    "azure-mgmt-storage>=21.0.0",
    "azure-identity>=1.13.0"
]
onprem = [
    "kubernetes>=27.0.0",
    "docker>=6.1.0",
    "ansible>=8.0.0",
    "paramiko>=3.2.0"
]
all = [
    "inferloop-infra[aws]",
    "inferloop-infra[gcp]",
    "inferloop-infra[azure]",
    "inferloop-infra[onprem]"
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "moto>=4.1.0",  # AWS mocking
    "responses>=0.23.0"  # HTTP mocking
]

[project.scripts]
inferloop-deploy = "inferloop_infra.cli.deploy:app"

[project.urls]
Homepage = "https://github.com/inferloop/inferloop-infra"
Repository = "https://github.com/inferloop/inferloop-infra"
Documentation = "https://inferloop-infra.readthedocs.io"
"Bug Reports" = "https://github.com/inferloop/inferloop-infra/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["inferloop_infra*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"